test/sema/member_instantiation_dataflow.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: int,
  y: int,
}

fn main() -> void {
  let n: int;

  let y = S { 
    x: 1, 
    y: n,
    // CHECK: [[# @LINE - 1 ]]:8: error: 'n' is not initialized
  };
}
